<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.UltimateImgSpider.MainActivity" >

    <item
        android:id="@+id/action_spiderGo"
        android:orderInCategory="100"
        android:title="@string/spiderGo"
        android:icon="@drawable/spidergo"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/setting"
        app:showAsAction="always" />"

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        android:icon="@drawable/exit"
        app:showAsAction="always" />
</menu>
