<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:baselineAligned="false"
    android:orientation="horizontal" >
    
    <com.View.ImageTextButton
        android:id="@+id/buttonPauseOrContinue"
        android:layout_weight="1"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        image="@drawable/pause"
        image_size="35dp"
        text="@string/pause" />
    
    <com.View.ImageTextButton
        android:id="@+id/buttonSelSrc"
        android:layout_weight="1"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        image="@drawable/select_src"
        image_size="35dp"
        text="@string/selSrc" />
	
    <com.View.ImageTextButton
        android:id="@+id/buttonClear"
        android:layout_weight="1"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        image="@drawable/delete"
        image_size="35dp"
        text="@string/clear" />
    
</LinearLayout>