<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browserMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
	android:visibility="invisible"
    android:baselineAligned="false"
    android:orientation="horizontal" >
    
    <RelativeLayout 
        android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content">

	    <com.view.ImageTextButton
	        android:id="@+id/buttonSetting"
	        android:layout_width="@dimen/browser_menu_width"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerHorizontal="true"
	        image="@drawable/setting"
	        text="@string/settings" />
	</RelativeLayout>
	
    <RelativeLayout 
        android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content">

	    <com.view.ImageTextButton
	        android:id="@+id/buttonRefresh"
	        android:layout_width="@dimen/browser_menu_width"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerHorizontal="true"
	        image="@drawable/menu_refresh"
	        text="@string/refresh" />
	</RelativeLayout>
	
    <RelativeLayout 
        android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content">

	    <com.view.ImageTextButton
	        android:id="@+id/buttonExit"
	        android:layout_width="@dimen/browser_menu_width"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerHorizontal="true"
	        image="@drawable/exit"
	        text="@string/exit" />
	</RelativeLayout>
    
</LinearLayout>